--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.0.1",
   "license": "MIT",
   "dependencies": {
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.10.0",
+    "sass-loader": "^6.0.0",
     "stats-webpack-plugin": "^0.4.3",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
+    "webpack-dev-middleware": "^1.10.0",
     "webpack-dev-server": "^1.16.2"
   }
 }
